JumpScript/tests/baselines/reference/propertyAccess5.errors.txt
tests/cases/compiler/propertyAccess5.jump(1,1): error TS2532: Object is possibly 'undefined'.


==== tests/cases/compiler/propertyAccess5.jump (1 errors) ====
    undefined.toBAZ();
    ~~~~~~~~~
!!! error TS2532: Object is possibly 'undefined'.